--- a/ng-demos/ng-demo-06/app/areas/home/views/indexInner6.html
+++ b/ng-demos/ng-demo-06/app/areas/home/views/indexInner6.html
@@ -1,1 +1,4 @@
 ﻿<h1>{{title}}</h1>
+<hr />
+<!--<pre>$route.current.templateUrl = {{$route.current.templateUrl}}</pre>-->
+<!--<pre>$location.path() = {{$location.path()}}</pre>-->
